--- a/Cours/TPs/tp1.cabal
+++ b/Cours/TPs/tp1.cabal
@@ -25,8 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      ArithExpr
       TP1
       TP2
+      TP3
   other-modules:
       Paths_tp1
   autogen-modules:
